<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="the_moviedb_base_api" translatable="false">https://api.themoviedb.org/3/</string>
    <string name="poster_image_url" translatable="false">https://image.tmdb.org/t/p/w92</string>
    <string name="the_moviedb_logo" translatable="false">The MovieDb Logo</string>

    <string name="bahasa_indonesia" translatable="false">Indonesia</string>
    <string name="bahasa_english" translatable="false">English</string>

    <string name="daily_reminder">Daily Reminder</string>
    <string name="msg_daily_reminder">Hi, check your movie application</string>
    <string name="daily_reminder_setup">Daily reminder set up</string>
    <string name="daily_reminder_cancel">Daily reminder cancel</string>

    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="release_today_reminder_setup">Release today reminder set up</string>
    <string name="release_today_reminder_cancel">Release today reminder cancel</string>

    <string name="save">Save</string>

    <string name="language_id">en-US</string>
    <string name="language_settings">Language Settings</string>
    <string name="remainder_settings">Remainder Settings</string>
    <string name="change_language_settings_menu">Change Language Settings</string>
    <string name="change_remainder_settings_menu">Change Remainder Settings</string>
    <string name="favorite_menu">Favorite</string>
    <string name="search_menu">Search</string>
    <string name="search_hint">Enter keyword</string>
    <string name="remove_favorite">Remove</string>

    <string name="msg_add_favorite_movie">The movie was successfully added to the favorites list</string>
    <string name="msg_add_favorite_tv_show">The tv show was successfully added to the favorites list</string>

    <string name="msg_failed_add_favorite_movie">The movie failed to add to the favorites list</string>
    <string name="msg_failed_add_favorite_tv_show">The tv show failed to add to the favorites list</string>

    <string name="msg_remove_favorite_movie">The movie was successfully deleted from the favorites list</string>
    <string name="msg_remove_favorite_tv_show">The tv show was successfully deleted from the favorites list</string>

    <string name="msg_load_data_failed">Loading failed, check your internet connection!</string>

    <string name="appwidget_text" translatable="false">The MovieDb Widget</string>
    <string name="empty_text">No Data</string>

    <string name="tab_movies">Movies</string>
    <string name="tab_tv_shows">Tv Shows</string>

    <string name="title">Movie Title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="tv_poster">Tv Show Poster</string>
    <string name="overview">Overview</string>
    <string name="vote">Vote Average</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tv_show">Detail Tv Show</string>
    <string name="release_date">Release Date</string>
    <string name="first_air_date">First Air Date</string>
</resources>
