<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_menu"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <group android:menuCategory="container">
        <item
            android:id="@+id/action_list_favorite"
            android:title="@string/favorite_menu"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_reminder_settings"
            android:title="@string/change_remainder_settings_menu"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_change_settings"
            android:title="@string/change_language_settings_menu"
            app:showAsAction="never"/>
    </group>

</menu>