<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.LanguageSettingsActivity">

    <CheckBox
        android:id="@+id/chk_daily_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_reminder" />

    <CheckBox
        android:id="@+id/chk_release_today_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_today_reminder" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>